added paragraph and a page

--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hi I am new to Git</p>
-    <p>and I am learning Git</p>
+    <p> Hi this is me</p>
 </body>
 </html>
